[package]
name = "hill_vacuum_shared"
version = "0.6.6"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Library of shared utilities among the other HillVacuum libraries"
homepage = "https://github.com/IvoryDuke/hill_vacuum_shared"
repository = "https://github.com/IvoryDuke/hill_vacuum_shared"
readme = "README.md"
keywords = ["gamedev", "mapeditor", "bevy"]
